# traderrs

./: .gitignore  Cargo.toml  data.csv  deploy.sh  traderrs.service
.github/workflows/: deploy.yml
migration/: database.sql
src/: api.rs  binance_connector.rs  bot_manager.rs  calculator.rs  connector.rs  constants.rs  entry_manager.rs  enums.rs  logger.rs  main.rs  position_manager.rs  repository.rs  ta.rs  tools.rs
src/models/: bot.rs  models.rs
src/repo/: repository.rs
src/strategy/: mod.rs  str_impl.rs  strategy.rs
ui/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
ui/src/: app.css  app.html
ui/src/lib/: config.ts  tools.ts  types.ts
ui/src/lib/component/: BotStatistics.svelte  Chart.svelte  ChartSvg.svelte  Orders.svelte  System.svelte
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
ui/src/routes/bots/[id]/: +page.svelte  +page.ts
ui/src/routes/bots/[id]/statistic/: +page.svelte  +page.ts
ui/src/routes/bots/statistics/: +page.svelte  +page.ts
ui/src/routes/login/: +page.svelte  +page.ts
